--- a/src/conf/app.json
+++ b/src/conf/app.json
@@ -15,9 +15,8 @@
     },
     "mounts": [
         { "path": "/", "app": "index.app", "roles": [ "admin" ] },
-        { "path": "/conf/.+", "roles": [ "admin" ] },
-        { "path": "/grit/.+", "roles": [ "admin" ] },
-        { "path": "/image/.+", "roles": [] },
-        { "path": "/json/.+|/img/.+", "app": "grit.handlers.app", "roles": [ "admin" ]}
+        { "path": "/image/.+|/conf/.+|/grit/template/.+", "roles": [] },
+        { "path": "/json/.+|/img/.+", "app": "grit.handlers.app", "roles": [ "admin" ]},
+        { "path": "/users/.+", "app": "gristle.app", "roles": [ "admin" ]}
     ]
 }
