--- a/src/conf/app.json
+++ b/src/conf/app.json
@@ -15,7 +15,7 @@
     },
     "mounts": [
         { "path": "/", "app": "index.app", "roles": [ "admin" ] },
-        { "path": "/image/.+|/conf/.+|/grit/template/.+", "roles": [] },
+        { "path": "/image/.+|/css/.+|/javascript/.+", "roles": [] },
         { "path": "/json/.+|/img/.+", "app": "grit.handlers.app", "roles": [ "admin" ]},
         { "path": "/users/?|/users/.+", "app": "gristle.app", "roles": [ "admin" ]}
     ]
