UI polish. With coarse grit sandpaper :-)

--- a/.project
+++ b/.project
@@ -20,4 +20,15 @@
 		<nature>org.ebayopensource.vjet.core.nature</nature>
 		<nature>org.python.pydev.pythonNature</nature>
 	</natures>
+	<filteredResources>
+		<filter>
+			<id>1363967694240</id>
+			<name>src/conf</name>
+			<type>5</type>
+			<matcher>
+				<id>org.eclipse.ui.ide.multiFilter</id>
+				<arguments>1.0-name-matches-false-false-*</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
