--- a/src/conf/app.json
+++ b/src/conf/app.json
@@ -6,7 +6,7 @@
         "version": "1.0",
         "copyright": "(c) 2012-2013 finiandarcy.com",
         "contact": "info@finiandarcy.com",
-        "contacturl": "http://www,finiandarcy.com",
+        "contacturl": "http://www.finiandarcy.com",
         "application_name": "Grumble test app",
         "application_url": "http://localhost:8080/"
     },
