signup process + tests
--HG--
rename : src/mailtemplate/signup_confirmation.txt => src/mailtemplate/password_reset.txt
rename : src/template/confirmation_success.html => src/template/grit/usermgmt/usersignup/confirmed.html
rename : src/template/signup.html => src/template/reset.html

--- a/src/conf/app.json
+++ b/src/conf/app.json
@@ -45,7 +45,8 @@
     	}
     ],
     "workflows": {
-        "signup": "grit.usermgmt.UserSignup"
+        "signup": "grit.usermgmt.UserSignup",
+        "pwdreset": "grit.usermgmt.PasswordReset"
     },
     "mounts": [
         { "path": "/", "app": "index.app", "roles": [] },
