Starting with sweattrails profiles
--HG--
rename : src/conf/grizzle.comp => src/conf/sweattrails.comp
rename : src/template/grit/usermgmt/usersignup/confirmed.html => src/template/grit/usermgmt/usercreate/confirmed.html
rename : src/template/grizzle/user/view.html => src/template/sweattrails/profile/view.html

--- a/src/conf/app.json
+++ b/src/conf/app.json
@@ -55,5 +55,5 @@
         { "path": "/image/.+|/css/.+|/javascript/.+", "roles": [] },
         { "path": "/json/.+|/img/.+", "app": "grit.handlers.app", "roles": [ "admin" ]}
     ],
-    "components": [ "grizzle" ]
+    "components": [ "grizzle", "sweattrails" ]
 }
