--- a/src/conf/app.json
+++ b/src/conf/app.json
@@ -55,7 +55,7 @@
     "mounts": [
         { "path": "/", "app": "index.app", "roles": [] },
         { "path": "/login|/logout|/um/.+", "app": "grit.usermgmt.app", "roles": [] },
-        { "path": "/image/.+|/css/.+|/javascript/.+", "roles": [] },
+        { "path": "/image/.+|/css/.+|/jscr/.+", "roles": [] },
         { "path": "/json/.+|/img/.+", "app": "grit.handlers.app", "roles": [ "admin" ]}
     ],
     "components": [ "grizzle", "sweattrails" ]
