Validators, Qt stuff
--HG--
rename : src/conf/qtapp.json => src/conf/database.json
rename : src/conf/database.json => src/conf/qtapp.json

--- a/src/conf/qtapp.json
+++ b/src/conf/qtapp.json
@@ -1,19 +1,7 @@
 {
     "author": "Jan de Visser",
     "version": "1.0",
-    "postgresql": {
-        "user": {
-            "user_id": "jan",
-            "password": "wbw417"
-        },
-        "admin": {
-            "user_id": "jan",
-            "password": "wbw417"
-        },
-	"host": "localhost",
-        "database": "jan",
-        "schema": "grumble",
-        "wipe_schema": true,
-        "wipe_database": false
+    "settings": {
+        "user_id": "jan"
     }
 }
