--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,6 +1,6 @@
 java.lib.path=
 main.file=grizzle/test/profile.py
-platform.active=Python_2.7.4
+platform.active=Python_2.7.5+
 python.lib.path=
 src.dir=src
 src.etc.dir=etc
