--- a/.project
+++ b/.project
@@ -6,6 +6,11 @@
 	</projects>
 	<buildSpec>
 		<buildCommand>
+			<name>org.eclipse.wst.common.project.facet.core.builder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
+		<buildCommand>
 			<name>org.ebayopensource.vjet.eclipse.core.builder</name>
 			<arguments>
 			</arguments>
@@ -19,6 +24,7 @@
 	<natures>
 		<nature>org.ebayopensource.vjet.core.nature</nature>
 		<nature>org.python.pydev.pythonNature</nature>
+		<nature>org.eclipse.wst.common.project.facet.core.nature</nature>
 	</natures>
 	<filteredResources>
 		<filter>
