--- a/src/conf/qtapp.json
+++ b/src/conf/qtapp.json
@@ -1,1 +1,8 @@
-{"version": "1.0", "author": "Jan de Visser", "settings": {"user": {"password": "wbw417", "user_id": "jan@de-visser.net"}}}
+{
+    "settings": {
+        "user": {
+            "password": "sha://83f2fc1759a60cdbbe28d82e4fa6d84e3f1ae780", 
+            "user_id": "jan@de-visser.net"
+        }
+    }
+}
