--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,7 +1,7 @@
 java.lib.path=
-main.file=grizzle/test/profile.py
-platform.active=Python_2.7.5+
-python.lib.path=
+main.file=sweattrails/qt/app.py
+platform.active=Python_2.7.3
+python.lib.path=C:\\Users\\jan\\Documents\\Projects\\Grumble\\src|C:\\Users\\jan\\Documents\\Projects\\Grumble\\garmin|
 src.dir=src
 src.etc.dir=etc
 src.test.dir=test
