--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -4,3 +4,4 @@ encoding//src/srtm/data.py=utf-8
 encoding//src/srtm/main.py=utf-8
 encoding//src/srtm/retriever.py=utf-8
 encoding//src/srtm/utils.py=utf-8
+encoding//src/sweattrails/device/fitparse/analyzer.py=utf-8
