Graphs work again.

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,5 @@
 java.lib.path=
 main.file=sweattrails/qt/app.py
-platform.active=Python_2.7.8
-python.lib.path=
+platform.active=Python_2.7.10
+python.lib.path=/usr/lib/python2.7/dist-packages|/home/jan/Projects/Grumble/src|
 src.dir=src
