--- a/src/conf/app.json
+++ b/src/conf/app.json
@@ -19,11 +19,7 @@
     },
     "logout": { "redirect": "/" },
     "roles": {
-        "user": { 
-        	"label": "SweatTrails Member",
-        	"urls": [ { "id": "logout", "label": "Logout", "url": "/logout", "level": 99 } ],
-        	"has_roles": []             
-    	},
+        "user": { },
         "moderator": {
         	"label": "Moderator",
         	"has_roles": [ "user" ]      
@@ -42,9 +38,11 @@
     "mounts": [
         { "path": "/", "app": "index.app", "roles": [] },
         { "path": "/login|/logout|/um/.+", "app": "grit.usermgmt.app", "roles": [] },
-        { "path": "/image/.+|/css/.+|/jscr/.+", "roles": [] },
+        { "path": "/image/.+|/css/.+|/jscr/.+", "roles": [], "abspath": "" },
         { "path": "/json/.+|/img/.+", "app": "grit.handlers.app", "roles": ["user"]},
+        { "path": "/upload/.+", "app": "grit.handlers.app", "roles": ["user"]},
         { "path": "/schema/.+", "app": "grit.handlers.app", "roles": ["user"]},
+        { "path": "/upload/.+", "app": "grit.upload.app", "roles": ["user"]},
         { "path": "/test/.+", "roles": [] }
     ],
     "components": [ "grizzle", "sweattrails" ]
