--- a/src/conf/app.json
+++ b/src/conf/app.json
@@ -37,9 +37,12 @@
     },
     "mounts": [
         { "path": "/", "app": "index.app", "roles": [] },
-        { "path": "/login|/logout|/um/.+", "app": "grit.usermgmt.app", "roles": [] },
-        { "path": "/image/.+|/css/.+|/jscr/.+", "roles": [], "abspath": "" },
-        { "path": "/json/.+|/img/.+", "app": "grit.handlers.app", "roles": ["user"]},
+        { "path": "/login|/logout|/profile|/um/.+", "app": "grit.usermgmt.app", "roles": [] },
+        { "path": "/css/[^/]+", "roles": [], "static": true},
+        { "path": "/image/[^/]+", "roles": [], "static": true},
+        { "path": "/jscr/[^/]+", "roles": [], "static": true},
+        { "path": "/img/.+", "app": "grit.handlers.app", "roles": ["user"]},
+        { "path": "/json/.+", "app": "grit.handlers.app", "roles": ["user"]},
         { "path": "/upload/.+", "app": "grit.handlers.app", "roles": ["user"]},
         { "path": "/schema/.+", "app": "grit.handlers.app", "roles": ["user"]},
         { "path": "/upload/.+", "app": "grit.upload.app", "roles": ["user"]},
