--- a/conf/app.json
+++ b/conf/app.json
@@ -4,14 +4,14 @@
     "app_id": "grumble",
     "about": {
         "version": "1.0",
-        "copyright": "(c) 2012-2013 finiandarcy.com",
+        "copyright": "(c) 2012-2018 finiandarcy.com",
         "contact": "info@finiandarcy.com",
         "contacturl": "http://www.finiandarcy.com",
         "application_name": "Grumble test app"
     },
     "config": {
         "google_api_key": "AIzaSyAGBJnvM6-HY8S_-5miEUR-uKetPVOYMRU",
-        "application_url": "http://localhost/"
+        "application_url": "http://localhost:8080"
     },
     "icon": "/ceilingcat.jpg",
     "container": {
@@ -22,12 +22,12 @@
         "user": { },
         "moderator": {
         	"label": "Moderator",
-        	"has_roles": [ "user" ]      
+        	"has_roles": [ "user" ]
     	},
-        "admin": { 
+        "admin": {
         	"label": "Administrator",
         	"urls": [ { "id": "usermgmt", "label": "User Management", "url": "/users", "level": 10 } ],
-        	"has_roles": [ "moderator" ] 
+        	"has_roles": [ "moderator" ]
     	}
     },
     "workflows": {
@@ -46,7 +46,8 @@
         { "path": "/upload/.+", "app": "grit.handlers.app", "roles": ["user"]},
         { "path": "/schema/.+", "app": "grit.handlers.app", "roles": ["user"]},
         { "path": "/upload/.+", "app": "grit.upload.app", "roles": ["user"]},
-        { "path": "/test/.+", "roles": [] }
+        { "path": "/t/.+", "roles": [], "app": "index.app" },
+        { "path": "/test/.+", "roles": [], "static": true }
     ],
-    "components": [ "grizzle", "sweattrails" ]
+    "include": [ "grizzle" ]
 }
