--- a/etc/grumble.conf
+++ b/etc/grumble.conf
@@ -1,12 +1,8 @@
-#WSGIPythonPath /home/jan/projects/grumble:/home/jan/projects/PrettyMaps
-WSGIDaemonProcess coyote user=jan group=jan threads=25 python-path=/var/www/wsgi/grumble:/var/www/wsgi/PrettyMaps display-name=%{GROUP}
+WSGIDaemonProcess coyote user=jan group=jan threads=25 python-path=/var/www/wsgi/grumble display-name=%{GROUP}
 WSGIProcessGroup coyote
 WSGICallableObject app
-WSGIScriptAlias / /var/www/wsgi/PrettyMaps/prettymaps/index.py
+WSGIScriptAlias / /var/www/wsgi/grumble/grit/grit.wsgi
 
 <Directory "/var/www/wsgi">
-   AllowOverride None
-   Options +ExecCGI -MultiViews +SymLinksIfOwnerMatch
    Require all granted
 </Directory>
-
