Improve config and autoreloading

--- a/.gitignore
+++ b/.gitignore
@@ -2,15 +2,15 @@
 **/.*~
 **/*.log
 **/*.backup
-src/logs/*
 nbproject/private/*
 users/*
 users
 db/*
-src/conf/qtapp.json
+/conf/applications.inc
+/conf/qtapp.json
 .kdev4/*
 .idea/*
 /dist/
 /*.egg-info
 **/#*#
-/venv/
+/etc/grumble.conf
